Set process priority to high on Windows
Fixes #1965